# python-lalr

./: README.md  mypy.ini  pyproject.toml  sample.bnf  test.bnf  test.cpp  test.txt  tmp.prof
jizzy/: bnf.py  builder.py  common.py  engine.py  grammar.py  helpers.py  jizzy_grammar.py  main.py  operators.py  tokenizer.py
jizzy/jizz/: builder.py  parser.py
jizzy/json/: builder.py  parser.py
tests/: test_jizzy.py  test_json.py
