[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jizzy"
version = "0.0.1"
authors = [
    { name = "Daniel Atanasov", email=""}
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "regex",
    "numpy",
    "tabulate",
    "pandas",
]
[project.urls]
"Homepage" = "https://github.com/Daniel-Atanasov/python-lalr"
"Bug Tracker" = "https://github.com/Daniel-Atanasov/python-lalr/issues"

